--- a/ruoyi-admin/src/main/resources/application.yml
+++ b/ruoyi-admin/src/main/resources/application.yml
@@ -120,4 +120,4 @@ xss:
 wechat:
   appid: wx47bd8aa584b53c77
   secret: 6cb1462e6a2341d7c0e281add7d84461
-  access_token_url: https://api.weixin.qq.com/cgi-bin/token
+  access_token_url: http://yy.ambuf.com/cgi-bin/token
