--- a/ruoyi-admin/src/main/resources/application.yml
+++ b/ruoyi-admin/src/main/resources/application.yml
@@ -126,6 +126,6 @@ wechat:
   access_token_url: ${wechat.domain}/sns/oauth2/access_token
   ticket_url: ${wechat.domain}/cgi-bin/ticket/getticket
   #模板Id
-  template_id: 123123
+  template_id: kbs5jEL9fgXci4njDeP85RVv7fR5nf3KdFYstbb8sLg
   #模板发送地址
   template_url: ${wechat.domain}/cgi-bin/message/template/send
