--- a/ruoyi-admin/src/main/resources/application.yml
+++ b/ruoyi-admin/src/main/resources/application.yml
@@ -118,12 +118,12 @@ xss:
   # 匹配链接
   urlPatterns: /system/*,/monitor/*,/tool/*
 wechat:
-  domain: http://yy.ambuf.com
+  domain: https://api.weixin.qq.com
   appid: wx47bd8aa584b53c77
   secret: 6cb1462e6a2341d7c0e281add7d84461
   base_access_token_url: ${wechat.domain}/cgi-bin/token
-  oauth2_url: ${wechat.domain}/cgi-bin/connect/oauth2/authorize
-  access_token_url: ${wechat.domain}/sns/oauth2/access_token
+  oauth2_url: https://open.weixin.qq.com/cgi-bin/connect/oauth2/authorize
+  access_token_url: https://api.weixin.qq.com/sns/oauth2/access_token
   ticket_url: ${wechat.domain}/cgi-bin/ticket/getticket
   #模板Id
   template_id: kbs5jEL9fgXci4njDeP85RVv7fR5nf3KdFYstbb8sLg
