--- a/ruoyi-common/pom.xml
+++ b/ruoyi-common/pom.xml
@@ -27,6 +27,12 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/cn.hutool/hutool-all -->
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>5.6.1</version>
+        </dependency>
 
         <!-- spring security 安全认证 -->
         <dependency>
